LPS-57250 On Mobile Devices, Simulator cannot display correctly

--- a/content-targeting-web/docroot/css/ct_simulator/main.css
+++ b/content-targeting-web/docroot/css/ct_simulator/main.css
@@ -117,3 +117,24 @@
 		}
 	}
 }
+
+/* ---------- Responsive ---------- */
+
+@include respond-to(phone) {
+	.aui {
+		.content-targeting-simulator {
+			.button-holder {
+				box-sizing: border-box;
+				position: relative;
+			}
+		}
+
+		body.lfr-has-simulator {
+			padding-left: 20px;
+		}
+
+		.lfr-admin-panel {
+			margin-bottom: 5px;
+		}
+	}
+}
